Changes to html and such. jumping to /complete also fixed - it will send you back to instructions.

--- a/static/game.css
+++ b/static/game.css
@@ -264,9 +264,14 @@
     position: absolute;
     top: 55px;
     left: 500px;
+
 }
 #scoreboard_text {
     position: absolute;
     top: 20px;
     left: 500px;
+}
+table, th, td {
+    border: 2px solid black;
+    border-collapse: collapse;
 }
